# Messima

./: LICENSE  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  global.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/Layout/: MainView.tsx  NavBar.tsx  TabsBar.tsx  TaskViewer.tsx  TasksViewer.tsx  TopBar.tsx  index.tsx
src/components/: AddTaskButton.tsx  FontsLoader.tsx  ListView.tsx  Tag.tsx  TaskInList.tsx
src/functions/db/: task.controller.ts  tasks.json
src/functions/services/: task.service.ts
src/pages/: NewTask.tsx  ViewTask.tsx  Welcome.tsx
src/pages/lists/: AllTasks.tsx
