[package]
name = "messima"
version = "0.0.0"
description = "Messima - Task Managment"
authors = ["brigazvi"]
license = "MIT"
repository = "https://github.com/messima/Messima"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "protocol-asset",
  "path-all",
  "fs-exists",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]                                   # or "postgres", or "mysql"
